src/pydio/ui/res/bootstrap/css/pydio.css
.well.well-sm h4{
    border-bottom: 1px solid;
    padding-bottom: 5px;
}

.progress{
    height: 15px;
    margin-top: 3px;
}

.repos{
    font-size: 17px;
    padding-left: 7px;
}

.repos:hover{
    background-color: #77b8e2;
    color: white;
}

.repos:hover > .repo-desc{
    color: #F2F9FF;
}

.repo-desc{
    color: gray;
    font-style:italic;
    font-size: 14px;
}

.customButton{
    width: 100%;
}


.advanced_radio_box label{
    cursor: pointer;
}

.advanced_radio_box {
width: 32%;
display: inline-block;
text-align: center;
vertical-align: middle;
padding: 4px 0;
cursor: pointer;
border: 1px solid #E7E7E7;
border-radius: 5px;
background-color: rgb(250, 250, 250);
border-width: 1px 1px 3px 1px;
}

.advanced_radio_box.conflict{
width: 24%;
}

.advanced_radio_box.label-radio-selected {
border-color: #d8d8d8;
background-color: rgb(236, 236, 236);
border-width: 3px 1px 1px 1px;
}

.advanced_radio_box.label-radio-hidden {
    display: none;
}

.display_on_hover{
    opacity: 0;
}
.display_on_hover:hover{
    opacity: 1.0;
}

.openDrawer{
    text-align: center;
    background-color: #fafafa;
    width: 21px;
    border-radius: 200px;
    padding: 5px;
    height: 21px;
    font-size: 0.7em;
    margin: 0 auto;
    margin-top: -32px;
    margin-bottom: 11px;
    border-bottom: 1px solid #ddd;
    color: #555;
}

.welcomeDiv{
    position: fixed;
    top:0;
    right:0;
    left: 0;
    bottom: 0;
    z-index: 100000;
    background-image: url('../../images/WelcomeScreen.png');
    background-position: center top;
    color: white;
    text-align: center;
    padding-top: 200px;
}

.navbar.navbar-fixed-top{
  background-color: #165170;
  border-color: #165170;
}

a.navbar-brand{
    display:block;
    width: 96%;
    background-image: url('../../images/logo.png');
    background-position: 11px 8px;
    background-size: auto 37px;
    background-repeat: no-repeat;
}

div.loader_image{
    background-image:url('../../images/pydio.png');
    background-repeat:no-repeat;
    width:129px;
    height:133px;
    display:inline-block;
}

.editHeader{
    position: fixed;
    background-color: #77b8e2;
    color: white;
    left: 0;
    right: 0;
    padding: 10px;
    top: 34px;
    z-index: 1000;
    font-size: 28px;
}

.shareHeader{
    position: fixed;
    background-color: #77b8e2;
    color: white;
    left: 0;
    right: 0;
    padding: 10px;
    top: 34px;
    z-index: 1000;
    font-size: 28px;
}

.settingsHeader{
    position: fixed;
    background-color: #77b8e2;
    color: white;
    left: 0;
    right: 0;
    padding: 10px;
    top: 34px;
    z-index: 1000;
    font-size: 28px;
}

.pulse {
    -webkit-animation-name: pulse;
    animation-name: pulse;
    -webkit-animation-duration: 2s;
    animation-duration: 2s;
    -webkit-animation-timing-function: ease;
    animation-timing-function: ease;
    -webkit-animation-iteration-count: infinite;
    animation-iteration-count: infinite;
}

/* Pulse */
@-webkit-keyframes pulse {
  25% {
    -webkit-transform: scale(1.04);
    transform: scale(1.04);
  }

  75% {
    -webkit-transform: scale(0.96);
    transform: scale(0.96);
  }
}

@keyframes pulse {
  25% {
    -webkit-transform: scale(1.04);
    transform: scale(1.04);
  }

  75% {
    -webkit-transform: scale(0.96);
    transform: scale(0.96);
  }
}

